syntax = "proto3";

package international_center.news;

option csharp_namespace = "InternationalCenter.Shared.Proto.News";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "Proto/common.proto";

// News article message
message NewsArticle {
  string id = 1;
  string title = 2;
  string slug = 3;
  string excerpt = 4;
  string content = 5;
  string author_name = 6;
  string author_email = 7;
  google.protobuf.Timestamp published_at = 8;
  bool featured = 9;
  string status = 10;
  string category = 11;
  repeated string tags = 12;
  string image_url = 13;
  string meta_title = 14;
  string meta_description = 15;
  google.protobuf.Timestamp created_at = 16;
  google.protobuf.Timestamp updated_at = 17;
  string metadata = 18; // JSON metadata
  google.protobuf.StringValue search_vector = 19;
  NewsCategory category_data = 20;
}

// News category message
message NewsCategory {
  string id = 1;
  string name = 2;
  string description = 3;
  string slug = 4;
  int32 display_order = 5;
  bool active = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// Request messages
message GetNewsArticlesRequest {
  international_center.common.PaginationRequest pagination = 1;
  international_center.common.CategoryFilter filter = 2;
  international_center.common.SortOptions sort = 3;
}

message GetNewsArticleBySlugRequest {
  string slug = 1;
}

message SearchNewsArticlesRequest {
  string query = 1;
  international_center.common.PaginationRequest pagination = 2;
  international_center.common.SortOptions sort = 3;
  international_center.common.CategoryFilter filter = 4;
}

message GetNewsCategoriesRequest {
  bool active_only = 1;
}

message GetFeaturedNewsRequest {
  google.protobuf.Int32Value limit = 1;
}

message GetRecentNewsRequest {
  int32 limit = 1;
}

// Response messages
message GetNewsArticlesResponse {
  repeated NewsArticle articles = 1;
  international_center.common.PaginationResponse pagination = 2;
}

message GetNewsArticleResponse {
  NewsArticle article = 1;
}

message SearchNewsArticlesResponse {
  repeated NewsArticle articles = 1;
  international_center.common.PaginationResponse pagination = 2;
  string query = 3;
}

message GetNewsCategoriesResponse {
  repeated NewsCategory categories = 1;
}

message GetFeaturedNewsResponse {
  repeated NewsArticle articles = 1;
}

message GetRecentNewsResponse {
  repeated NewsArticle articles = 1;
}

// News service definition
service NewsService {
  // Get paginated list of news articles with filtering and sorting
  rpc GetNewsArticles(GetNewsArticlesRequest) returns (GetNewsArticlesResponse);
  
  // Get news article by slug
  rpc GetNewsArticleBySlug(GetNewsArticleBySlugRequest) returns (GetNewsArticleResponse);
  
  // Search news articles with full-text search
  rpc SearchNewsArticles(SearchNewsArticlesRequest) returns (SearchNewsArticlesResponse);
  
  // Get news categories
  rpc GetNewsCategories(GetNewsCategoriesRequest) returns (GetNewsCategoriesResponse);
  
  // Get featured news articles
  rpc GetFeaturedNews(GetFeaturedNewsRequest) returns (GetFeaturedNewsResponse);
  
  // Get recent news articles
  rpc GetRecentNews(GetRecentNewsRequest) returns (GetRecentNewsResponse);
  
  // Stream news articles for real-time updates (future enhancement)
  rpc StreamNewsArticles(GetNewsArticlesRequest) returns (stream NewsArticle);
  
  // Health check
  rpc HealthCheck(international_center.common.HealthCheckRequest) returns (international_center.common.HealthCheckResponse);
}